# ipfs_contract

./: README.md
ipfs_contract/: .gitignore  Cargo.toml  run.sh
ipfs_contract/src/: configuration_parameters.rs  contract.rs  main.rs
ipfs_contract/src/storage/: Cargo.toml
