[package]
name = "ipfs_contract"
version = "0.1.0"
authors = ["Sougata Bhattacharjee 'D-3-X-T-3-R' <sougata.bhattacharjee94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = { version = "0.12.0", features = ["with-actix"], default-features = false }
ipfs-api-backend-actix = "0.2"
actix = "0.11.1"
actix-rt = "2.1.0"
