[package]
name = "ipfs_contract"
version = "0.1.0"
authors = ["Sougata Bhattacharjee 'D-3-X-T-3-R' <sougata.bhattacharjee94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = { version = "0.12.0", features = ["with-actix"], default-features = false }
ipfs-api-backend-actix = "0.2"
actix = "0.11.1"
actix-rt = "2.1.0"
clap = "2.31.2"
ink_metadata = { git = "https://github.com/hicommonwealth/ink", branch = "master", package = "ink_metadata", default-features = false, features = ["derive"], optional = true }
ink_primitives = { git = "https://github.com/hicommonwealth/ink", branch = "master", default-features = false }
ink_env = { git = "https://github.com/hicommonwealth/ink", branch = "master", package = "ink_env", default-features = false }
ink_storage = { git = "https://github.com/hicommonwealth/ink", branch = "master", package = "ink_storage", default-features = false }
ink_lang = { git = "https://github.com/hicommonwealth/ink", branch = "master", package = "ink_lang", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.3", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []