[package]
name = "storage"
version = "0.1.0"
authors = ["Sougata Bhattacharjee 'D-3-X-T-3-R' <sougata.bhattacharjee94@gmail.com>"]
edition = "2018"

[dependencies]
ink_metadata = { git = "https://github.com/hicommonwealth/ink", branch = "master", package = "ink_metadata", default-features = false, features = ["derive"], optional = true }
ink_primitives = { git = "https://github.com/hicommonwealth/ink", branch = "master", default-features = false }
ink_env = { git = "https://github.com/hicommonwealth/ink", branch = "master", package = "ink_env", default-features = false }
ink_storage = { git = "https://github.com/hicommonwealth/ink", branch = "master", package = "ink_storage", default-features = false }
ink_lang = { git = "https://github.com/hicommonwealth/ink", branch = "master", package = "ink_lang", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "storage"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
